--- a/examples/element-with-class-before.html
+++ b/examples/element-with-class-before.html
@@ -17,7 +17,7 @@ p.highlight {
 }
 
 /* all elements with class 'highlight' as well as with class 'mainpoint'. */
-.highlight {
+.highlight.mainpoint {
   color: red;
   background-color: black;
 }
