--- a/examples/index.html
+++ b/examples/index.html
@@ -22,16 +22,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <script src="js/ajax-utils.js"></script>
     <script src="js/script.js"></script>
   </head>
 <body>
   <h1 id="title">Lecture 53</h1>
   
   <p>
-    Say hello to 
-    <input id="name" type="text">
+    <!--Say hello to 
+    <input id="name" type="text">-->
     <button>
-      Say it!
+      Say Something!!
     </button>
   </p>
 
@@ -41,3 +42,4 @@
   
 </body>
 </html>
+
